KUDU-63. Remove last usages of boost::condition_variable

Per the JIRA, boost's condition variable implementation is less efficient than
our own, plus doesn't properly use monotonic time. This patch removes the last
places we used the boost implementation.

Change-Id: I35a49da4760decee97e6a20ee4754803dd81ffe6
Reviewed-on: http://gerrit.cloudera.org:8080/3097
Tested-by: Kudu Jenkins
Reviewed-by: Adar Dembo <adar@cloudera.com>